salesforce/call-journey/source/objects/D365_Contact_Center_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Where your Dynamics 365 Contact Center lives. Used to build the "Play recording" / "Transcript" links.</description>
    <fields>
        <fullName>Org_Url__c</fullName>
        <description>Your Dynamics 365 environment URL, e.g. https://contoso.crm.dynamics.com</description>
        <inlineHelpText>Example: https://contoso.crm.dynamics.com (no trailing slash needed)</inlineHelpText>
        <label>Dynamics 365 URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>App_Id__c</fullName>
        <description>Optional. The app ID of the "Contact Center Call Review" model-driven app installed by the Dynamics 365 solution.</description>
        <inlineHelpText>Optional. Paste the appid of the Contact Center Call Review app (from its URL). Leave blank to use your default app.</inlineHelpText>
        <label>Call Review App ID</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone_Offset__c</fullName>
        <description>Hours from UTC used for call titles ("Phone call received on Fri, Sep 25 · 9:24 PM ET"). Standard time, e.g. -5 for US Eastern, -8 for US Pacific, 0 for London, 1 for Paris, 5.5 for India.</description>
        <inlineHelpText>Standard-time offset from UTC in hours. Examples: -5 US Eastern, -6 US Central, -8 US Pacific, -3 Brazil, 0 UK, 1 Central Europe, 5.5 India. Blank = UTC.</inlineHelpText>
        <label>Time Zone Offset (hours)</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Daylight_Saving_Rule__c</fullName>
        <description>Which daylight saving rule applies to call titles: US (second Sunday of March to first Sunday of November), EU (last Sunday of March to last Sunday of October), or blank for none.</description>
        <inlineHelpText>Type US, EU, or leave blank if your time zone has no daylight saving time.</inlineHelpText>
        <label>Daylight Saving Rule</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Zone_Label__c</fullName>
        <description>Short label shown at the end of call titles, e.g. ET, PT, CET, BRT. Blank shows the UTC offset.</description>
        <inlineHelpText>Short label shown at the end of call titles, e.g. ET, PT, GMT, CET. Blank shows UTC±offset.</inlineHelpText>
        <label>Time Zone Label</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>D365 Contact Center Settings</label>
</CustomObject>